# neper

./: .gitignore  README  VERSIONS
src/: CMakeLists.txt  mp.c  mp.h  neper_config.h.in
src/Structs/: structAll.h  structIntePara.h  structNSite.h  structOri.h  structPolygon.h
src/Utils/: AllUtils.h  CMakeLists.txt
src/Utils/ArrayUtils/: AllocUtils.c  AllocUtils.h  AllocUtils0.h  ArrayUtils0.h  FreeUtils.c  FreeUtils.h  FreeUtils0.h  OperUtils.c  OperUtils.h  OperUtils0.h  ZerosUtils.c  ZerosUtils.h  ZerosUtils0.h
src/Utils/CharUtils/: CharUtils.c  CharUtils.h  CharUtils0.h
src/Utils/DisplayUtils/: DisplayUtils.c  DisplayUtils.h  DisplayUtils0.h
src/Utils/FEUtils/: FEUtils.h  FEUtils0.h  FEUtils1.c
src/Utils/FileUtils/: FileUtils.c  FileUtils.h  FileUtils0.h
src/Utils/GeoUtils/: GeoUtils0.h
src/Utils/GslUtils/: GslUtils.c  GslUtils.h  GslUtils0.h
src/Utils/MMeshUtils/: MMeshUtils.h  MMeshUtils0.h  MMeshUtils1.c  MMeshUtils2.c  MMeshUtils3.c
src/Utils/MatrixUtils/: MatrixUtils.c  MatrixUtils.h  MatrixUtils0.h  VectorUtils.c  VectorUtils.h  VectorUtils0.h
src/Utils/MeshUtils/: MeshUtils.h  MeshUtils0.h  MeshUtils1.c  MeshUtils2.c
src/Utils/MshUtils/: MshUtils0.h
src/Utils/NumUtils/: NumUtils.c  NumUtils.h  NumUtils0.h
src/Utils/OptionUtils/: OptionUtils.c  OptionUtils.h  OptionUtils0.h
src/Utils/SpaceUtils/: SpaceUtils.h  SpaceUtils0.h  SpaceUtils1.c  SpaceUtils2.c
src/Utils/TensorUtils/: TensorUtils.c  TensorUtils.h  TensorUtils0.h
src/Utils/TessDesUtils/: TessDesUtils.c  TessDesUtils.h  TessDesUtils0.h
src/Utils/TessUtils/: FreeStruct.c  FreeStruct.h  FreeStruct0.h  TessUtils0.h  ZerosStruct.c  ZerosStruct.h  ZerosStruct0.h
src/Utils/VectorUtils/: VectorUtils.h  VectorUtils0.h  VectorUtils1.c
src/cmake/: FindGSL.cmake
src/contrib/orilib/: CMakeLists.txt  ol_cal.h  ol_config.h.in  ol_des.h  ol_gen.h  ol_glo.h  orilib.h
src/contrib/ut/: CMakeLists.txt  ut.h  ut_alloc.h  ut_arg.h  ut_array.h  ut_color.h  ut_config.h.in  ut_fig.h  ut_file.h  ut_free.h  ut_legacy.h  ut_linalg.h  ut_mat.h  ut_math.h  ut_num.h  ut_option.h  ut_print.h  ut_space.h  ut_string.h  ut_sys.h  ut_tensor.h  ut_time.h  ut_vector.h
src/neper_fm/: CMakeLists.txt  neper_fm.c  neper_fm.h  neper_fm0.h  structIn_fm.h
src/neper_fm/GeoStuff/: GeoStuff.h  GeoStuff0.h  GeoStuff1.c  GeoStuff2.c
src/neper_fm/InputData_fm/: InputData_fm.h  InputData_fm0.h  InputData_fm1.c  InputData_fm2.c  InputData_fm3.c
src/neper_fm/MStat/: MStat.h  MStat0.h  MStat1.c  MStat2.c  MStat3.c
src/neper_fm/Meshing0D/: Meshing0D.h  Meshing0D0.h  Meshing0D1.c  Meshing0D2.c
src/neper_fm/Meshing1D/: Meshing1D.h  Meshing1D0.h  Meshing1D1.c  Meshing1D2.c  Meshing1D3.c
src/neper_fm/Meshing2D/: Meshing2D.h  Meshing2D1.c
src/neper_fm/Meshing3D/: Meshing3D.h  Meshing3D0.h  Meshing3D1.c  Meshing3D2.c
src/neper_fm/Partition/: Partition.h  Partition0.h  Partition1.c  Partition2.c  Partition3.c  Partition4.c  Partition5.c
src/neper_fm/Premeshing/: Premeshing.h  Premeshing1.c  Premeshing2.c
src/neper_fm/ReadMesh/: ReadMesh.h  ReadMesh0.h  ReadMesh1.c
src/neper_fm/ReconMesh/: ReconMesh.h  ReconMesh0.h  ReconMesh1.c  ReconMesh2.c
src/neper_fm/RegularizeGeo/: RegularizeGeo.h  RegularizeGeo0.h  RegularizeGeo1.c
src/neper_fm/Remapping/: Remapping.h  Remapping0.h  Remapping1.c  Remapping2.c
src/neper_fm/Remeshing/: Remeshing.h  Remeshing0.h  Remeshing1.c  Remeshing2.c
src/neper_fm/SearchNSets/: SearchNSets.h  SearchNSets1.c  SearchNSets2.c
src/neper_fm/WriteMesh/: WriteMesh.h  WriteMesh0.h  WriteMesh1.c
src/neper_fm/nefm/: nefm.h
src/neper_fm/nefm_init/: nefm_init.h  nefm_init0.h  nefm_init1.c  nefm_init2.c
src/neper_fm/nem_cleaning/: nem_cleaning.h  nem_cleaning1.c
src/neper_fm/nem_init/: nem_init.h  nem_init0.h  nem_init1.c  nem_init2.c
src/neper_fm/nem_meshing/: nem_meshing.c  nem_meshing.h  nem_meshing0.h
src/neper_fm/nem_meshing_hex/: RMeshing.h  RMeshing0.h  RMeshing1.c  RMeshing2.c
src/neper_fm/nem_nsets/: nem_nsets.h  nem_nsets0.h  nem_nsets1.c  nem_nsets2.c
src/neper_fm/nem_stat/: nem_stat.h  nem_stat0.h  nem_stat1.c  nem_stat2.c
src/neper_m/: CMakeLists.txt  neper_m.c  neper_m.h  neper_m0.h  structIn_m.h
src/neper_m/nem/: nem.h
src/neper_m/nem_cleaning/: nem_cleaning.h  nem_cleaning0.h  nem_cleaning1.c
src/neper_m/nem_init/: nem_init.h  nem_init0.h  nem_init1.c  nem_init2.c
src/neper_m/nem_input/: nem_input.h  nem_input0.h  nem_input1.c  nem_input2.c  nem_input3.c
src/neper_m/nem_meshing/: nem_meshing.h  nem_meshing0.h  nem_meshing1.c  nem_meshing2.c  nem_meshing3.c
src/neper_m/nem_meshing_hex/: nem_meshing_hex.h  nem_meshing_hex0.h  nem_meshing_hex1.c  nem_meshing_hex2.c
src/neper_m/nem_meshing_quad/: nem_meshing_quad.h  nem_meshing_quad0.h  nem_meshing_quad1.c  nem_meshing_quad2.c
src/neper_m/nem_nsets/: nem_nsets.h  nem_nsets0.h  nem_nsets1.c  nem_nsets2.c  nem_nsets3.c
src/neper_m/nem_partition/: nem_partition.h  nem_partition0.h  (+5 more)
src/neper_mm/: CMakeLists.txt  neper_mm.c  neper_mm.h  neper_mm0.h  structIn_mm.h
src/neper_o/: CMakeLists.txt  neper_o.c  neper_o.h  neper_o0.h  structIn_o.h
src/neper_t/: CMakeLists.txt  neper_t.c  neper_t.h  neper_t0.h  structIn_t.h
src/neper_vs/: CMakeLists.txt  neper_vs.c  neper_vs.h  neper_vs0.h
src/neut/: CMakeLists.txt  neut.h  neut_data.h  neut_debug.h  neut_elt.h  neut_fod.h  neut_fodnodes.h  neut_geo.h  neut_germset.h  neut_gmsh.h  neut_m.h  neut_mesh.h  neut_mmesh.h  neut_mtess.h  neut_multim.h  neut_nodes.h  neut_nset.h  neut_o.h  neut_part.h  neut_poly.h  neut_polymod.h  neut_povray.h  neut_print.h  neut_rand.h  neut_scale.h  neut_structs.h  neut_t.h  neut_tesl.h  neut_tess.h  neut_utils.h  neut_vox.h  neut_vs.h
src/orilib/: CMakeLists.txt  ol_cal.h  ol_config.h.in  ol_des.h  ol_gen.h  ol_glo.h  ol_map.h  ol_set.h  orilib.h
src/ut/: CMakeLists.txt  ut.h  ut_alloc.h  ut_arg.h  ut_array.h  ut_color.h  ut_config.h.in  ut_fig.h  ut_file.h  ut_free.h  ut_mat.h  ut_math.h  ut_num.h  ut_option.h  ut_png.h  ut_print.h  ut_space.h  ut_string.h  ut_sys.h  ut_tensor.h  ut_time.h  ut_vector.h
(+975 files in other folders)
